# evidence-toolkit

./: .gitignore  CHANGELOG.md  CLAUDE.md  COMMIT_HISTORY.md  CONTRIBUTING.md  CROSS_ANALYSIS_SCHEMA_DESIGN.md  CURRENT_STATE.json  CURRENT_TASK_CONTEXT.md  GETTING_STARTED.md  LICENSE  PLAN.md  PRIVACY.md  QUICKSTART.md  README.md  RELEASE_CHECKLIST.md  SCHEMA_ARCHITECTURE_SUMMARY.md  SECURITY.md  SIMPLIFICATION_FIXES.json  V3_ARCHITECTURE.md  V3_NEW_COMMANDS.md  V3_PROGRESS.md  create_test_case.py  create_test_images.py  pyproject.toml  quick-start.sh  reanalyze.sh  summary2.py  test_batch_performance.py  test_batch_quick.sh  test_cross_analysis_schema.py  test_parallel_speedup.py  validate_cross_analysis.py  workflow_ai_feat.md
.ai-docs/openai/: images.md
.claude/: AGENT_PROPOSAL.md  MIGRATION_CHECKLIST.md  STRUCTURE_PLAN.md  WORKFLOW_OPTIMIZATION.md  task-context-generator.md
.claude/agents/: api-handler.md  command-builder.md  document-ai-engineer.md  email-implementation-specialist.md  evidence-forensics-expert.md  rca-debugger.md  schema-architect.md  v4-architect.md
.claude/commands/: AUTOMATION_GUIDE.md  README.md  api-process-case.md  api-status.md  api.md  command-docs.md  create-agent.md  create-command.md  create-docs.md  create-test-case.md  detect-duplicates.md  package-release.md  phase1-ai-upgrade.md  phase1-schema.md  phase1-setup.md  prime.md  rca.md  status.md  task-context.md  test-fix.md  update-docs.md  validate-plan.md
.github/ISSUE_TEMPLATE/: ai-entity-resolution-optimization.md
.test-unified/: pyvenv.cfg
.test-venv/: pyvenv.cfg
archive/docs/: CROSS_EVIDENCE_ANALYSIS_SCOPE.md  EMAIL_FORENSIC_ARCHITECTURE.md  EVIDENCE_TYPE_ASSESSMENT.md
archive/old/: basic_retaliation_visualizations.py  data_analysis.py  retaliation_analysis.py  retaliation_visualizations.py  simple_retaliation_analysis.py  word_cloud_generator.py
archive/v2.0/document-evidence-analyzer/: .gitignore  CLAUDE.md  process-case.sh  pyproject.toml
archive/v2.0/document-evidence-analyzer/.claude/agents/: docs-expert.md
archive/v2.0/document-evidence-analyzer/cases/WORKPLACE-2024-002/: requirements.txt
archive/v2.0/document-evidence-analyzer/inbox/: README.md
archive/v2.0/document-evidence-analyzer/scripts/: validate_analyses.sh
archive/v2.0/document-evidence-analyzer/src/document_analyzer/: __init__.py  ai_models.py  case_summary_generator.py  cli.py  correlation_analyzer.py  document_analyzer_core.py  email_analyzer.py  email_models.py  email_parser.py  evidence_manager.py  image_analyzer.py  transcript_parser.py  unified_models.py  utils.py  validation.py  web_dashboard.py
archive/v2.0/document-evidence-analyzer/src/domains/: __init__.py  legal_config.py
archive/v2.0/document-evidence-analyzer/test_packages/CORRELATION_TEST_analysis_package_20250928_145923/: package_metadata.json
archive/v2.0/document-evidence-analyzer/test_pdfs/: Paul Boucherat shared _HandS-Concern_ with you.eml
demos/: ENHANCEMENT_SUCCESS.md  LAUNCH_READY_SUMMARY.md  QUICK_START_CHECKLIST.md  TERMS_OF_SERVICE.md  landing_page_copy.md
demos/workplace_investigation_001/: README.md  executive_summary.txt
demos/workplace_investigation_001_real/: README.md  package_metadata.json
docs/: AB_TESTING_FRAMEWORK.md  ANALYZERS.md  API.md  API_QUICK_REFERENCE.md  CASE_TYPES.md  CHANGELOG.md  DOCUMENTATION_AUDIT_2025-10-10.md  GENERATORS_IMPLEMENTATION_PLAN.md  PARALLEL_IMAGE_PROCESSING.md  PHASE_2_PLAN.md  PIPELINE_PROMPT_VALIDATION.md  README.md  SLASH_COMMAND_TEMPLATE.md  V3.1_DATA_FLOW.md  V3_3_COMPLETE.md  V3_DEDUPLICATION_REPORT.md  V4_ARCHITECTURE.md  V4_RELEASE_NOTES.md  WASTED_DATA_INVENTORY.md  storage-module.md
docs/api/: README.md  models-quick-reference.md  models.md  schema-reference.md
docs/development/: GETTING_STARTED.md
document-evidence-analyzer/: README.md  USER_GUIDE.md  handsconcern_analysis.json  longterm  pdf_analysis.json  pyproject.toml  test_text_content.txt
evidence_toolkit/: __init__.py  cli.py
examples/: QUICKSTART_EXAMPLE.md  README.md  cross-analysis-example.json
image-analysis/: .gitignore  AGENTS.MD  CLAUDE.md  README.md  USER_GUIDE.md  main.py  plan.md  pyproject.toml  validate_schema.py
image-analysis/.claude/agents/: evidence-analyst.md
image-analysis/.claude/commands/: analyze-evidence.md
image-analysis/image_analysis/: cli.py  db.py  models.py  paths.py  utils.py
image-analysis/inbox/: README.md
image-analysis/schemas/: evidence.v1.json
image-analysis/scripts/: validate_analyses.sh
models/: cross_analysis_models.py
reports/: AI_RESOLUTION_FINAL_ASSESSMENT.md  GENERATORS_PLAN_SUMMARY.md  HONEST_AB_TEST_RESULTS.md  PHASE_1_2_IMPLEMENTATION_REVIEW.md  ab_test_20251010_044252.md  ab_test_fair_comparison.md  final_packages_analysis.md
schemas/: cross-analysis.v1.json
scripts/: QUICKSTART_AB_TESTING.md  README.md  ab_test_ai_resolve.py  create_branded_pdf.py  create_demo_case.py  generate_ab_test_cases.py  generate_comparison_report.py  sanitize_real_case.py  validate_cross_analyses.sh
test_emails/: test.eml
tests/: conftest.py  test_critical.py  test_models.py  test_pipeline.py
(+149 files in other folders)
